@@ -6,6 +6,7 @@ freebsd 5.4-release gcc 3.4.2 x86
 freebsd 6.0-release gcc 3.4.4 alpha
 freebsd 6.0-release gcc 3.4.4 ia64
 freebsd 6.2-release gcc 3.4.6 x86
+freebsd 6.3-release-p1 gcc 3.4.6 x86
 hpux b.11.11 hp_c 0.0.0 parisc
 hpux b.11.23 hp_c 0.0.0 parisc
 hpux b.11.23 hp_c 3.0.6 ia64
