@@ -1,6 +1,0 @@
-#include "_sysinfo.h"
-
-int main(void)
-{
-  return 0;
-}
