@@ -1,1 +1,0 @@
-sysinfo.o
