@@ -322,3 +322,4 @@
                when scanning negative floating point numbers.
 20070727 version: corelib 0.58
 20080115 code: updated inst-check.c
+20080223 code: removed sysinfo.c, included _sysinfo.h in corelib-conf.c
